Revert main src changes