@@ -31,6 +31,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.logging.Logger;
 import javax.annotation.CheckForNull;
 
 /**
@@ -43,6 +44,8 @@ import javax.annotation.CheckForNull;
  */
 public class QueueItemCache {
 
+	private final static Logger LOGGER = Logger.getLogger(QueueItemCache.class.getName());
+
 	static private QueueItemCache queueItemCache = null;
 
 	static {
@@ -54,7 +57,7 @@ public class QueueItemCache {
 	}
 
 	// Keeps track of all items currently in the queue
-	private Map<Long, ItemInfo> item2info = new HashMap<Long, ItemInfo>();
+	private Map<Integer, ItemInfo> item2info = new HashMap<Integer, ItemInfo>();
 	// Keeps track of the last started item of the Job
 	private Map<String, ItemInfo> jobName2info = new HashMap<String, ItemInfo>();
 
@@ -68,7 +71,7 @@ public class QueueItemCache {
 	 * @return the {@link ItemInfo} for the provided id or <code>null</code> if the id is not in the
 	 *         queue
 	 */
-	synchronized public ItemInfo getItem(long itemId) {
+	synchronized public ItemInfo getItem(int itemId) {
 		return item2info.get(itemId);
 	}
 
@@ -85,14 +88,14 @@ public class QueueItemCache {
 	}
 
 	synchronized public ItemInfo addItem(ItemInfo itemInfo) {
-		Long itemId = Long.valueOf(itemInfo.getItemId());
+		Integer itemId = new Integer(itemInfo.getItemId());
 		item2info.put(itemId, itemInfo);
 		jobName2info.put(itemInfo.getJobName(), itemInfo);
 		return itemInfo;
 	}
 
         @CheckForNull
-	synchronized public ItemInfo removeItem(long itemId) {
+	synchronized public ItemInfo removeItem(int itemId) {
 		return item2info.remove(itemId);
 	}
 
